<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/submit_btn_height">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".MainActivity">

            <TextView
                android:id="@+id/tv_question1"
                style="@style/question_text_style"
                android:text="@string/question_1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <RadioGroup
                android:id="@+id/radioGroup1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="@dimen/answer_margin"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_question1">

                <RadioButton
                    android:id="@+id/radio1_answer_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="@dimen/padding_between_radio_text"
                    android:text="@string/question_1_answer_1" />

                <RadioButton
                    android:id="@+id/radio1_answer_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="@dimen/padding_between_radio_text"
                    android:text="@string/question_1_answer_2" />

                <RadioButton
                    android:id="@+id/radio1_answer_3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="@dimen/padding_between_radio_text"
                    android:text="@string/question_1_answer_3" />

                <RadioButton
                    android:id="@+id/radio1_answer_4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="@dimen/padding_between_radio_text"
                    android:text="@string/question_1_answer_4" />
            </RadioGroup>

            <TextView
                android:id="@+id/tv_question2"
                style="@style/question_text_style"
                android:layout_marginTop="@dimen/margin_btwn_questions"
                android:text="@string/question_2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/radioGroup1" />

            <RadioGroup
                android:id="@+id/radioGroup2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/answer_margin"
                android:layout_marginTop="@dimen/answer_margin"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_question2">

                <RadioButton
                    android:id="@+id/radio2_answer_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="@dimen/padding_between_radio_text"
                    android:text="@string/question_2_answer_1" />

                <RadioButton
                    android:id="@+id/radio2_answer_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="@dimen/padding_between_radio_text"
                    android:text="@string/question_2_answer_2" />

                <RadioButton
                    android:id="@+id/radio2_answer_3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="@dimen/padding_between_radio_text"
                    android:text="@string/question_2_answer_3" />

                <RadioButton
                    android:id="@+id/radio2_answer_4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="@dimen/padding_between_radio_text"
                    android:text="@string/question_2_answer_4" />
            </RadioGroup>

            <TextView
                android:id="@+id/tv_question3"
                style="@style/question_text_style"
                android:layout_marginTop="@dimen/margin_btwn_questions"
                android:text="@string/question_3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/radioGroup2" />

            <CheckBox
                android:id="@+id/question3_answer1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/answer_margin"
                android:layout_marginTop="@dimen/answer_margin"
                android:paddingStart="@dimen/padding_between_radio_text"
                android:text="@string/question_3_answer_1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_question3" />

            <CheckBox
                android:id="@+id/question3_answer2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/answer_margin"
                android:paddingStart="@dimen/padding_between_radio_text"
                android:text="@string/question_3_answer_2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/question3_answer1" />

            <CheckBox
                android:id="@+id/question3_answer3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/answer_margin"
                android:paddingStart="@dimen/padding_between_radio_text"
                android:text="@string/question_3_answer_3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/question3_answer2" />

            <CheckBox
                android:id="@+id/question3_answer4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/answer_margin"
                android:paddingStart="@dimen/padding_between_radio_text"
                android:text="@string/question_3_answer_4"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/question3_answer3" />

            <TextView
                android:id="@+id/tv_question4"
                style="@style/question_text_style"
                android:layout_marginTop="@dimen/margin_btwn_questions"
                android:text="@string/question_4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/question3_answer4" />

            <EditText
                android:id="@+id/written"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/answer_margin"
                android:layout_marginTop="@dimen/answer_margin"
                android:hint="@string/enter_your_answer"
                android:inputType="text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_question4" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <Button
        android:id="@+id/btn_sumbit"
        android:layout_width="match_parent"
        android:layout_height="@dimen/submit_btn_height"
        android:layout_gravity="bottom"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/submit"
        app:cornerRadius="0dp" />
</FrameLayout>